Bug 1493353 - Clip TextDrawTarget to the visible rect, and avoid emitting display items that are outside the clipped area. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D14367

--HG--
extra : moz-landing-system : lando