gfx/thebes/gfxFontMissingGlyphs.cpp
@@ -337,8 +337,8 @@ static void DrawHexChar(uint32_t aDigit, Float aLeft, Float aTop,
       dest.height = fabs(dest.height);
     }
     // Finally, push the colored image with point filtering.
-    tdt->PushImage(key, wr::ToLayoutRect(bounds), wr::ToLayoutRect(dest),
-                   wr::ImageRendering::Pixelated, wr::ToColorF(aColor));
+    tdt->PushImage(key, bounds, dest, wr::ImageRendering::Pixelated,
+                   wr::ToColorF(aColor));
   } else {
     // For the normal case, just draw the given digit from the atlas. Point
     // filtering is used to ensure the mini-font rectangles stay sharp with any
